ksql.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   # nginx.ingress.kubernetes.io/secure-backends: "true"
   # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
   # nginx.ingress.kubernetes.io/proxy-body-size: "0"
   # nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
   # nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
   # nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
   # nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  name: ksql-ui
  namespace: dev-confluent-cluster
spec:
  rules:
  - host: "ksql.apps-int-dev.barwabank.local"
    http:
      paths:
      - backend:
          serviceName: dev-confluent-cp-ksql-server
          servicePort: 8088
        path: /
  tls:
  - hosts:
    - "ksql.apps-int-dev.barwabank.local"
    secretName: ksql-tls
